Bug 355451: Be more efficient when creating HTML elements. r/sr=jst